カードを更新するエンドポイントの作成 (#144)
* Update schema

* カードを更新するエンドポイントを実装
